recursion.lessons.recursion.tree.Tree.scala.error
Tree:17: error: not found: value shreink
avance(length*shrink*shreink)
                     ^